# backend/src/docs/swagger.json
@@ -750,7 +750,11 @@
 				"tags": [
 					"Posts"
 				],
-				"security": [],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
 				"parameters": [],
 				"requestBody": {
 					"required": true,
